--- a/PruebaSemaforo/PruebaSemaforo.csproj
+++ b/PruebaSemaforo/PruebaSemaforo.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FomularioSecundario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FomularioSecundario.Designer.cs">
+      <DependentUpon>FomularioSecundario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +61,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Semaforo.cs" />
+    <EmbeddedResource Include="FomularioSecundario.resx">
+      <DependentUpon>FomularioSecundario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
